--- a/app/views/sales-targets-list.html
+++ b/app/views/sales-targets-list.html
@@ -52,6 +52,8 @@
         <tr>
           <th>Name</th>
           <th>Description</th>
+          <th>Effective Start</th>
+          <th>Effective End</th>
           <th>Updated Date/Time</th>
           <th>Updated User</th>
           <th>Actions</th>
@@ -61,6 +63,8 @@
         <tr class="ng-scope" ng-repeat="salesTarget in salesTargetList">
           <td>{{ salesTarget.name }}</td>
           <td>{{ salesTarget.description}}</td>
+          <td>{{ salesTarget.startDate}}</td>
+          <td>{{ salesTarget.endDate}}</td>
           <td>{{ loadUpdatedOn(salesTarget) }}</td>
           <td>{{ loadUpdatedBy(salesTarget) }}</td>
           <td>
