TS5PORTAL-522 - Added crud access

--- a/app/views/sales-targets.html
+++ b/app/views/sales-targets.html
@@ -414,4 +414,4 @@
 
 <leave-view-modal></leave-view-modal>
 
-<dynamic-left-nav title="Sales Target "></dynamic-left-nav>
+<dynamic-left-nav></dynamic-left-nav>
