--- a/app/views/manual-ECS.html
+++ b/app/views/manual-ECS.html
@@ -185,7 +185,7 @@
 
       <div class="row">
         <div class="col-xs-6">
-          <table infinite-scroll="loadPortalInstances()" class="table table-hover table-responsive ng-scope" ng-show="storeInstances.length">
+          <table infinite-scroll="loadPortalInstances(true)" class="table table-hover table-responsive ng-scope" ng-show="storeInstances.length">
             <thead>
             <tr>
               <th>Store Number</th>
