--- a/app/views/schedule-report.html
+++ b/app/views/schedule-report.html
@@ -7,7 +7,7 @@
 
 <div class="modal-body">
      <div class="form-group">
-      <label class="col-sm-4 control-label">Recurrence Pattern: <span style="color:red">*</span></label>
+     <label class="col-sm-4 control-label">Recurrence Pattern: <span style="color:red">*</span></label>
      <span class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport.name.$invalid}">
       <select class="form-control" id="" ng-model="scheduleReport.recurrencePattern" name="" ng-required="true"
 	    ng-options="pattern.value as pattern.name for pattern in recurrencePattern">
@@ -22,6 +22,9 @@
             <input type="checkbox" data-checklist-model="user.daysOfWeek" data-checklist-value="day.value"> {{day.value}} 
       </div>
       </span>
+      <div class="reportErrorMessage" ng-if="scheduleReportForm.$submitted && errMessage">
+      	<span> {{ errMessage }} </span>
+      </div>
     </div>
     
     <div class="form-group" ng-show="scheduleReport.recurrencePattern=='Weekly'">
