--- a/app/views/schedule-report.html
+++ b/app/views/schedule-report.html
@@ -1,5 +1,5 @@
 <!-- /Container  Starts -->
-<form class="form-horizontal" name="scheduleReportForm" ng-submit="saveReport()">
+<form class="form-horizontal" name="reportOptions" ng-submit="saveReport()">
 <!-- <pre id="default-spacing">{{ user.daysOfWeek | json }}</pre> --> 
 <div class="modal-header">
   <h3 class="modal-title">Scheduling Report {{template.name}}</h3>
@@ -19,10 +19,10 @@
      <label class="col-sm-4 control-label">Days Of Week	: <span style="color:red">*</span></label>
       <span class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport.daysOfWeek.$invalid}"> 
       <div ng-repeat="day in daysOfWeek" class="form-group">
-            <input type="checkbox" data-checklist-model="user.daysOfWeek" data-checklist-value="day.value"> {{day.value}} 
+            <input type="checkbox" data-checklist-model="user.daysOfWeek" data-checklist-value="day.value" /> {{day.value}} 
       </div>
       </span>
-      <div class="reportErrorMessage" ng-if="scheduleReportForm.$submitted && errMessage">
+      <div class="reportErrorMessage" ng-if="reportOptions.$submitted && errMessage">
       	<span> {{ errMessage }} </span>
       </div>
     </div>
@@ -54,7 +54,7 @@
      <span class="col-sm-6 input-group" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': errRecurrenceDatePicker || scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
        <input type="text" class="form-control" name="" ng-model="scheduleReport.recurrenceStartDate" ng-required="true"  
                datepicker-popup="{{format}}" min-date="today"
-               datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"  /> <!-- -->
+               datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"  />
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
@@ -72,7 +72,7 @@
         <span class="col-sm-6 input-group" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': errRecurrenceDatePicker || scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
        <input type="text" class="form-control" name="" ng-model="scheduleReport.recurrenceEndDate" ng-required="true" 
        		   datepicker-popup="{{format}}" min-date="today"
-               datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"/> <!-- -->
+               datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"/>
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
@@ -143,7 +143,7 @@
             <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
           </ui-select-choices>
         </ui-select>
-        <ui-select ng-if="!option.multiValue && option.choiceLookup" ng-model="selection.options[option.code]">
+       <ui-select ng-if="!option.multiValue && option.choiceLookup" name="{{option.code}}" ng-model="selection.options[option.code]" ng-class="{'has-success': reportOptions.$submitted && !option.optional && reportOptions[option.code].length > 0 && reportOptions[option.code].$valid, 'has-error': reportOptions.$submitted && (reportOptions[option.code].$invalid || reportOptions[option.code].$pristine)}" >
           <ui-select-match placeholder="Select value...">{{$select.selected.code}}</ui-select-match>
           <ui-select-choices repeat="choice in choices | filter: $select.search track by choice.id"
                              refresh="refreshChoiceValues($select.search)" refresh-delay="10" >
@@ -162,8 +162,8 @@
         <span ng-if="!option.multiValue && !option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
           <input type="text" name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" />
         </span>
-        <span ng-if="!option.multiValue && option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <select name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" ng-required="false" >
+        <span ng-if="!option.multiValue && option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': (!option.optional && reportOptions.$submitted) && (reportOptions[option.code].$invalid || reportOptions[option.code].$pristine)}">
+          <select name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" ng-required="!option.optional">
             <option ng-if="option.optional" value="">All</option>
             <option ng-repeat="choiceValue in option.choiceValues" value="{{choiceValue}}">{{choiceValue}}</option>
           </select>
