--- a/app/views/stock-owner-item-create.html
+++ b/app/views/stock-owner-item-create.html
@@ -144,6 +144,34 @@
 
             <input-textarea ng-if="isVoucherSelected" label="Notes" name="notes" placeholder="Notes for Voucher" max-length="255"></input-textarea>
 
+            <div class="row" ng-if="isVirtualSelected">
+              <div class="col-xs-6 col-sm-6">
+                <div class="form-group">
+                  <label>VAT Country</label>
+                  <ui-select ng-model="formData.vatCountry" theme="bootstrap" id="vatCountry"  style="min-height: 34px;">
+                    <ui-select-match placeholder="VAT Country" allow-clear>{{ $select.selected.countryName }}</ui-select-match>
+                    <ui-select-choices
+                      repeat="country in countries | filter: $select.search | orderBy:'countryName'">
+                      <div ng-bind-html="country.countryName | highlight: $select.search"></div>
+                    </ui-select-choices>
+                  </ui-select>
+                </div>
+              </div>
+              <div class="col-xs-6 col-sm-6">
+                <div class="form-group">
+                  <label>VAT Rate</label>
+                  <input
+                    ng-class="{ 'has-error' : !formData.vatRate && displayError , 'has-success' : formData.vatRate }"
+                    ng-model="formData.vatRate"
+                    type="text"
+                    class="form-control"
+                    placeholder="10.00"
+                    name="VAT Rate"
+                    ng-pattern="regexp.numberWithTwoDecimal">
+                </div>
+              </div>
+            </div>
+
 						<div class="form-group">
 							<label>Item Substitutions</label>
 							<ui-select multiple ng-model="formData.substitutions" theme="bootstrap">
