TS5PORTAL-687 - Limit size of vat rate

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -224,7 +224,8 @@
                       class="form-control"
                       placeholder="10.00"
                       name="VAT Rate"
-                      ng-pattern="regexp.numberWithTwoDecimal">
+                      ng-pattern="regexp.numberWithTwoDecimal"
+                      max-length="6">
                   </div>
                 </div>
               </div>
