TS5PORTAL-687 - Mak VAT rate required if country is selected

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -225,7 +225,8 @@
                       placeholder="10.00"
                       name="VAT Rate"
                       ng-pattern="regexp.numberWithTwoDecimal"
-                      max-length="6">
+                      max-length="6"
+                      ng-required="formData.vatCountry">
                   </div>
                 </div>
               </div>
