TS5PORTAL-687 - Fix max length

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -225,7 +225,7 @@
                       placeholder="10.00"
                       name="VAT Rate"
                       ng-pattern="regexp.numberWithTwoDecimal"
-                      max-length="6"
+                      maxlength="6"
                       ng-required="formData.vatCountry">
                   </div>
                 </div>
