--- a/app/views/stock-owner-item-create.html
+++ b/app/views/stock-owner-item-create.html
@@ -148,7 +148,14 @@
               <div class="col-xs-6 col-sm-6">
                 <div class="form-group">
                   <label>VAT Country</label>
-                  <ui-select ng-model="formData.vatCountry" theme="bootstrap" id="vatCountry"  style="min-height: 34px;">
+                  <ui-select
+                    name="vatCountry"
+                    ng-model="formData.vatCountry"
+                    theme="bootstrap"
+                    id="vatCountry"
+                    ng-required="formData.vatRate"
+                    style="min-height: 34px;"
+                    ng-class="{ 'has-error' : !formData.vatCountry && displayError , 'has-success' : formData.vatCountry }">
                     <ui-select-match placeholder="VAT Country" allow-clear>{{ $select.selected.countryName }}</ui-select-match>
                     <ui-select-choices
                       repeat="country in countries | filter: $select.search | orderBy:'countryName'">
