--- a/app/views/scheduled-reports.html
+++ b/app/views/scheduled-reports.html
@@ -7,11 +7,12 @@
       
          <div class="panel panel-default">
            <div class="panel-heading clearfix">
-              <h4 class="panel-title pull-left" style="padding-top: 7.5px;">{{scheduledReport.template.name}}</h4>
+              <h4 class="panel-title pull-left" style="padding-top: 7.5px;">{{scheduledReport.template.name}} (ID {{scheduledReport.id}})</h4>
               
-              <!-- <div class="btn-group pull-right">
-               		 <toggle-switch ng-model="scheduledReport.isActive" ng-click="disableScheduled(scheduledReport)"/> 
-              </div> -->
+               <div class="btn-group pull-right">
+               		 <button ng-if="scheduledReport.isActive" class="btn btn-warning btn-sm" ng-click="disableScheduled(scheduledReport)">Disable
+	        		 </button>
+              </div> 
               
               <!-- <div class="btn-group pull-right">
                  <button class="btn" ng-click="viewScheduled(scheduledReport)">
@@ -21,10 +22,10 @@
               
            </div>
          <div class="panel-body" style="color: green">
-             {{scheduledReport.template.description}} <br></br>
-             {{scheduledReport.recurrencePattern}} every {{scheduledReport.dayOfWeek}} {{scheduledReport.daysOfWeek}} {{scheduledReport.dayOfMonth=='-1'?'Last Day':scheduledReport.dayOfMonth}} 
-             at {{scheduledReport.recurrenceTime.substring(0, 5);}} on TimeZone[{{scheduledReport.timeZone}}] 
-             from {{scheduledReport.recurrenceStartDate | date :  "dd.MM.y"}} to {{scheduledReport.recurrenceEndDate | date :  "dd.MM.y"}} and Scheduled By {{ scheduledReport.scheduledByPerson.userName }}
+             <strong> {{scheduledReport.recurrencePattern}} </strong> every {{scheduledReport.dayOfWeek}} {{scheduledReport.daysOfWeek}} {{scheduledReport.dayOfMonth=='-1'?'Last Day':scheduledReport.dayOfMonth}} 
+             at <strong> {{scheduledReport.recurrenceTime.substring(0, 5);}} TimeZone[{{scheduledReport.timeZone}}].  </strong>
+             Effective from {{scheduledReport.recurrenceStartDate | date :  "dd.MM.y"}} to {{scheduledReport.recurrenceEndDate | date :  "dd.MM.y"}}. 
+             <span style="float: right">Scheduled By <strong> {{ scheduledReport.scheduledByPerson.userName }}</strong></span>
            </div>
         </div>
               
