--- a/app/views/queue.html
+++ b/app/views/queue.html
@@ -68,7 +68,7 @@
                <span class="glyphicon glyphicon-save" aria-hidden="true" title="Download"></span>
              </a>
            </span>
-           <span ng-if="job.status === 'FAILED' || job.status === 'FINISHED'" title="Re-request">
+           <span ng-if="job.status === 'FAILED' || job.status === 'FINISHED' || job.status === 'CANCELED'" title="Re-request">
             <a ng-click="reRunTemplate(job)" class="btn btn-xs btn-warning">
               <span class="glyphicon glyphicon-repeat" aria-hidden="true" title="Re-request"></span>
             </a>
