--- a/app/views/report-options.html
+++ b/app/views/report-options.html
@@ -27,14 +27,14 @@
       </span>
       <span ng-switch-when="ID" ng-controller="OptionSelectionSelectCtrl" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
         <ui-select ng-if="option.multiValue && option.choiceLookup" name="{{option.code}}" multiple ng-model="selection.options[option.code]">
-          <ui-select-match placeholder="Select value...">{{$item.code}}</ui-select-match>
+          <ui-select-match allow-clear="true" placeholder="Select value...">{{$item.code}}</ui-select-match>
           <ui-select-choices repeat="choice in choices | filter: $select.search track by choice.id"
                              refresh="refreshChoiceValues($select.search)" refresh-delay="10" >
             <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
           </ui-select-choices>
         </ui-select>
         <ui-select ng-if="!option.multiValue && option.choiceLookup" name="{{option.code}}" ng-model="selection.options[option.code]" ng-class="{'has-success': reportOptions.$submitted && !option.optional && reportOptions[option.code].length > 0 && reportOptions[option.code].$valid, 'has-error': reportOptions.$submitted && !option.optional && (reportOptions[option.code].$invalid || reportOptions[option.code].$pristine)}" >
-          <ui-select-match placeholder="Select value...">{{$select.selected.code}}</ui-select-match>
+          <ui-select-match allow-clear="true" placeholder="Select value...">{{$select.selected.code}}</ui-select-match>
           <ui-select-choices repeat="choice in choices | filter: $select.search track by choice.id"
                              refresh="refreshChoiceValues($select.search)" refresh-delay="10" >
               <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
