TS5PORTAL-775 - Add feature enable / disable

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -318,7 +318,7 @@
                 </small>
               </div>
 
-              <div class="row">
+              <div class="row" ng-show="showSATFields">
                 <div class="col-xs-6 col-sm-6">
                   <div class="form-group">
                     <label>SAT Product </label>
