TS5PORTAL-625 | Sales Receipt ePOS Reports

--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -264,7 +264,7 @@
     <thead>
     <tr>
       <th>
-       <input type="checkbox" ng-model="isAllChecked" ng-change="checkUncheckAll()">
+       <input type="checkbox" ng-model="isAllChecked" ng-change="checkUncheckAll()" ng-checked="false">
       </th>
       <th>Transaction Date</th>
       <th ng-show="displayColumns.paymentId">Transaction ID</th>
