--- a/app/views/pre-order-list.html
+++ b/app/views/pre-order-list.html
@@ -4,7 +4,6 @@
       <h2 class="view-name">{{ viewName }}</h2>
     </div>
     <div class="col-xs-6 text-right">
-      <a href="#/sales-targets/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Sales Target</span></a>
       <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
               aria-expanded="false"
               aria-controls="search-collapse" id="filterButton">
@@ -17,13 +16,13 @@
   <div class="sales-target-data-list">
 
     <div class="panel panel-default no-transition" id="search-collapse">
-      <form name="salesTargetSearchForm" ng-submit="searchSalesTargetData()">
+      <form name="preOrderSearchForm" ng-submit="searchPreOrderData()">
         <div class="panel-body">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
                 <label for="orderNumber">Order Number</label>
-                <input ng-model="search.orderNumber" type="text" class="form-control" id="orderNumber" placeholder="Order Number">
+                <input ng-model="search.preOrderNumber" type="text" class="form-control" id="orderNumber" placeholder="Order Number">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
@@ -51,7 +50,7 @@
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
                 <label for="pnr">PNR</label>
-                <input ng-model="search.pnr" type="text" class="form-control" id="pnr" placeholder="PNR">
+                <input ng-model="search.pnrNumber" type="text" class="form-control" id="pnr" placeholder="PNR">
               </div>
             </div>
           </div>
@@ -59,13 +58,13 @@
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input ng-model="search.firstName" type="text" class="form-control" id="firstName" placeholder="First Name">
+                <input ng-model="search.paxFirstName" type="text" class="form-control" id="firstName" placeholder="First Name">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
                 <label for="lastName">Last Name</label>
-                <input ng-model="search.lastName" type="text" class="form-control" id="lastName" placeholder="Last Name">
+                <input ng-model="search.paxLastName" type="text" class="form-control" id="lastName" placeholder="Last Name">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2">
@@ -99,10 +98,10 @@
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
                 <label for="currency">Currency</label>
-                <ui-select name="currency" id="currency"  ng-model="search.currency" theme="bootstrap">
-                  <ui-select-match placeholder="Currency">{{ $select.selected.code }}</ui-select-match>
-                  <ui-select-choices repeat="currency in currencyList | filter: $select.search | orderBy:'code' | limitTo: 100">
-                    <div ng-bind-html="currency.code | highlight: $select.search "></div>
+                <ui-select name="currency" id="currency"  ng-model="search.paymentCurency" theme="bootstrap">
+                  <ui-select-match placeholder="Currency">{{ $select.selected.currencyCode }}</ui-select-match>
+                  <ui-select-choices repeat="currency in currencyList | filter: $select.search | orderBy:'currencyCode' | limitTo: 100">
+                    <div ng-bind-html="currency.currencyCode | highlight: $select.search "></div>
                   </ui-select-choices>
                 </ui-select>
               </div>
@@ -122,46 +121,15 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2">
               <div class="form-group">
-                <label for="item">Product</label>
-                <ui-select name="item" id="item" ng-model="search.item" theme="bootstrap">
-                  <ui-select-match placeholder="Item">{{ $select.selected.itemName }}</ui-select-match>
-                  <ui-select-choices repeat="item in itemList | filter: $select.search | orderBy:'name' | limitTo: 100">
-                    <div ng-bind-html="item.itemName | highlight: $select.search "></div>
-                  </ui-select-choices>
-                </ui-select>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-2">
-              <div class="form-group">
-                <label for="orderBy">Order By</label>
-                <select type="text"
-                        name="orderBy"
-                        class="form-control"
-                        ng-model="search.orderBy"
-                        id="orderBy">
-                  <option value="">Select Order</option>
-                  <option value="companyName">Order Number</option>
-                  <option value="companyName">Order Date From</option>
-                  <option value="companyName">Order Date To</option>
-                  <option value="companyName">Flight Date From</option>
-                  <option value="companyName">Flight Date To</option>
-                  <option value="companyName">PNR</option>
-                  <option value="companyName">First Name</option>
-                  <option value="companyName">Last Name</option>
-                  <option value="companyName">Flight Number</option>
-                  <option value="companyName">Departure Station</option>
-                  <option value="companyName">Arrival Station</option>
-                  <option value="companyName">Currency</option>
-                  <option value="companyName">Category</option>
-                  <option value="companyName">Product</option>
-                </select>
+                <label for="itemCode">Item Code</label>
+                <input ng-model="search.itemCode" type="text" class="form-control" id="itemCode" placeholder="Item Code">
               </div>
             </div>
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearSalesTargetSearch">Clear</button>
-          <button type="submit" class="btn btn-primary" id="searchSalesTarget">Search</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearPreOrderSearch">Clear</button>
+          <button type="submit" class="btn btn-primary" id="searchPreOrder">Search</button>
         </div>
       </form>
     </div>
@@ -192,17 +160,8 @@
           <td>{{ preOrder.orderStatus }}</td>
           <td>{{ preOrder.totalAmount }} {{ preOrder.totalAmountCurrency }}</td>
           <td>
-            <button class="btn btn-info btn-xs" ng-click="redirectToSalesTarget(salesTarget.id, 'view')" tabindex="0">
+            <button class="btn btn-info btn-xs" ng-click="redirectToPreOrder(preOrder.id, 'view')" tabindex="0">
               <i class="fa fa-file"></i>
-            </button>
-            <button class="btn btn-primary btn-xs" ng-click="redirectToSalesTarget(salesTarget.id, 'edit')" ng-show="isCRUD && isSalesTargetEditable(salesTarget)" tabindex="0">
-              <i class="fa fa-pencil"></i>
-            </button>
-            <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(preOrderList[$index], ['name', 'startDate', 'endDate'])"
-                    tabindex="0"
-                    ng-show="isCRUD && showDeleteButton(salesTarget)">
-              <i class="fa fa-trash"></i>
             </button>
           </td>
         </tr>
