TS5PORTAL-625 | device id view

--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -316,6 +316,7 @@
       <td>{{ printPropertyIfItIsCreditCardPayment(transaction, 'hostRefNumber') }}</td>
       <td>{{ printPropertyIfItIsCreditCardPayment(transaction, 'paymentId') }}</td>
       <td ng-show="displayColumns.seatNumber">{{ getSeatNumber(transaction.seatNumberRow) }}{{ transaction.seatNumberLoc }}</td>
+      <td ng-show="displayColumns.deviceId">{{ transaction.deviceId }}</td>
       <td>{{ printTransactionAmount(transaction) }}</td>
       <td ng-show="displayColumns.scheduleNumber">{{ transaction.scheduleNumber }}</td>
       <td ng-show="displayColumns.scheduleDate">{{ transaction.instanceDate }}</td>
