--- a/app/views/pre-order.html
+++ b/app/views/pre-order.html
@@ -6,13 +6,13 @@
       </div>
 
       <div class="col-xs-6 text-right">
-        <a class="btn btn-default" ng-href="#/sales-targets" class="btn" ng-show="readOnly">Back</a>
+        <a class="btn btn-default" ng-href="#/pre-orders" class="btn">Back</a>
       </div>
     </div>
   </div>
-  <error-dialog form-object="salesTargetDataForm" error-response="errorResponse" display="displayError"></error-dialog>
+  <error-dialog form-object="preOrderDataForm" error-response="errorResponse" display="displayError"></error-dialog>
   <!-- Data Input Section -->
-  <form name="salesTargetDataForm" class="edit-form" novalidate>
+  <form name="preOrderDataForm" class="edit-form" novalidate>
     <div class="panel panel-default">
       <div class="panel-body">
 
@@ -77,12 +77,6 @@
               <div class="row">
                 <div class="col-xs-12 col-sm-2">
                   <div class="form-group">
-                    <label>Flight ID</label><br />
-                    {{ order.preOrderId }}
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-2">
-                  <div class="form-group">
                     <label>Flight Number</label><br />
                     {{ order.flightNumber }}
                   </div>
@@ -115,40 +109,40 @@
               <div class="row">
                 <div class="col-xs-12 col-sm-12">
                   <h3><strong>Items</strong></h3>
-                  <table class="table table-bordered table-hover">
-                    <thead>
-                      <tr>
-                        <th>Code</th>
-                        <th>Image</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Category</th>
-                        <th>Sub Category</th>
-                        <th>Price Per Item</th>
-                        <th>Quantity</th>
-                        <th>Total Price</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr class="ng-scope" ng-repeat="item in order.itemData">
-                        <td>{{ item.itemCode }}</td>
-                        <td><img ng-if="item.itemImage" ng-src="item.itemImage" style="max-width: 50px; max-height: 50px;"></td>
-                        <td>{{ item.itemName }}</td>
-                        <td>{{ item.itemDescription }}</td>
-                        <td>{{ item.itemCategory }}</td>
-                        <td>{{ item.itemSubCategory }}</td>
-                        <td>{{ item.itemPrice }} {{ preOrder.totalAmountCurrency }}</td>
-                        <td>{{ item.qtyOrdered }}</td>
-                        <td>{{ item.itemPrice * item.qtyOrdered }}</td>
-                      </tr>
-                      <tr>
-                        <td colspan="6"></td>
-                        <td><strong>Total:</strong></td>
-                        <td><strong>{{ order.totalItems }}</strong></td>
-                        <td><strong>{{ order.totalPrice }} {{ preOrder.totalAmountCurrency }}</strong></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <div class="table-responsive">
+                    <table class="table table-bordered table-hover">
+                      <thead>
+                        <tr>
+                          <th>Code</th>
+                          <th>Name</th>
+                          <th>Description</th>
+                          <th>Category</th>
+                          <th>Sub Category</th>
+                          <th>Price Per Item</th>
+                          <th>Quantity</th>
+                          <th>Total Price</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="ng-scope" ng-repeat="item in order.itemData">
+                          <td>{{ item.itemCode }}</td>
+                          <td>{{ item.itemName }}</td>
+                          <td>{{ item.itemDescription }}</td>
+                          <td>{{ item.itemCategory }}</td>
+                          <td>{{ item.itemSubCategory }}</td>
+                          <td>{{ item.itemPrice }} {{ preOrder.totalAmountCurrency }}</td>
+                          <td>{{ item.qtyOrdered }}</td>
+                          <td>{{ item.itemPrice * item.qtyOrdered }}</td>
+                        </tr>
+                        <tr>
+                          <td colspan="5"></td>
+                          <td><strong>Total:</strong></td>
+                          <td><strong>{{ order.totalItems }}</strong></td>
+                          <td><strong>{{ order.totalPrice }} {{ preOrder.totalAmountCurrency }}</strong></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
 
@@ -160,11 +154,8 @@
           </div>
         </div>
 
-        <div class="panel-footer text-right" ng-hide="readOnly">
-          <a href="#/sales-targets" class="btn btn-default">Cancel</a>
-          <button class="btn btn-primary" ng-click="formSave()">
-            <span class="fa fa-check-square-o" aria-hidden="true"></span> <span class="hidden-xs">Save</span>
-          </button>
+        <div class="panel-footer text-right">
+          <a class="btn btn-default" ng-href="#/pre-orders" class="btn">Back</a>
         </div>
       </div>
     </div>
