--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -57,11 +57,6 @@
                 <input ng-click="$event.stopPropagation();" type="checkbox" ng-model="displayColumns.seatNumber">
                 Seat Number</a>
             </li>
-            <li ng-click="$event.stopPropagation();">
-              <a ng-click="toggleColumnView('deviceId')">
-                <input ng-click="$event.stopPropagation();" type="checkbox" ng-model="displayColumns.deviceId">
-                Device/MAC ID</a>
-            </li>
           </ul>
         </div>
 
@@ -203,12 +198,6 @@
                 <input ng-model="search.seatNumberLoc" custom-pattern="alphanumericSpaces" type="text" class="form-control" id="seat-number-loc" name="seatNumberloc"  placeholder="22 or 22B or B"/>
               </div>
             </div>
-            <div class="col-md-2 col-sm-6">
-              <div class="form-group">
-                <label for="device-number-loc">Device / MAC Id</label>
-                <input ng-model="search.deviceId" custom-pattern="alphanumericSpaces" type="text" class="form-control" id="device-number-loc" name="deviceIdloc"  placeholder="BCA8A68BEC73"/>
-              </div>
-            </div>
 
           </div>
           <div class="row" ng-show="isCreditCardPaymentSelected">
@@ -258,10 +247,8 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-         <button type="button" class="btn btn-default" ng-click="showSelectedTransactionDetails()">View Multiple Receipts
-       	 </button>
           <button type="button" class="btn btn-default" ng-click="clearSearch()">Clear</button>
-          <button type="submit" class="btn btn-primary" ng-disabled="isSearchLoading" >Search</button>
+          <button type="submit" class="btn btn-primary">Search</button>
         </div>
       </form>
     </div>
@@ -274,9 +261,6 @@
     <table infinite-scroll="getTransactions()" class="table table-bordered table-hover">
     <thead>
     <tr>
-      <th>
-       <input type="checkbox" ng-model="isAllChecked" ng-click="checkUncheckAll()" ng-checked="false">
-      </th>
       <th>Transaction Date</th>
       <th ng-show="displayColumns.paymentId">Transaction ID</th>
       <th ng-show="displayColumns.transactionId">Shopping Cart ID</th> 
@@ -290,7 +274,6 @@
       <th>Host Reference Number</th>
       <th>CC Transaction ID</th>
       <th ng-show="displayColumns.seatNumber">Seat Number</th>
-      <th ng-show="displayColumns.deviceId">Device / MAC ID</th> 
       <th>Amount</th>
       <th ng-show="displayColumns.scheduleNumber">Schedule Number</th>
       <th ng-show="displayColumns.scheduleDate">Schedule Date</th>
@@ -302,7 +285,6 @@
     </thead>
     <tbody>
     <tr ng-repeat="transaction in transactions">
-      <td><input name="checkboxtxn" ng-model="transaction.selected" id="{{transaction.transactionId}}" type="checkbox" value="{{transaction.transactionId}}" ng-change="checkUncheckHeader()"></td>
       <td nowrap>{{ transaction.transactionDate }}</td>
       <td ng-show="displayColumns.paymentId">{{ transaction.id }}</td>
       <td ng-show="displayColumns.transactionId">{{ transaction.transactionId }}</td>
@@ -316,7 +298,6 @@
       <td>{{ printPropertyIfItIsCreditCardPayment(transaction, 'hostRefNumber') }}</td>
       <td>{{ printPropertyIfItIsCreditCardPayment(transaction, 'paymentId') }}</td>
       <td ng-show="displayColumns.seatNumber">{{ getSeatNumber(transaction.seatNumberRow) }}{{ transaction.seatNumberLoc }}</td>
-      <td ng-show="displayColumns.deviceId">{{ transaction.deviceId }}</td>
       <td>{{ printTransactionAmount(transaction) }}</td>
       <td ng-show="displayColumns.scheduleNumber">{{ transaction.scheduleNumber }}</td>
       <td ng-show="displayColumns.scheduleDate">{{ transaction.instanceDate }}</td>
