TS5PORTAL-600 | Edit fix on Excise Duty

--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -300,7 +300,7 @@
                     class="btn btn-success btn-xs" 
                     tabindex="0" 
                     ng-show="isSelectedToEdit(exciseDuty)" 
-                    ng-click="saveEdit()">
+                    ng-click="saveEdit(exciseDuty)">
               <i class="fa fa-check"></i>
             </button>
             <button type="button"
