TS5PORTAL-928| 893-863-upload-updated-by-fix

--- a/app/views/stock-take-report.html
+++ b/app/views/stock-take-report.html
@@ -118,7 +118,7 @@
           <span ng-show="{{ !stockTake.isSubmitted }}">Saved</span>
           <span ng-show="{{ stockTake.isSubmitted }}">Submitted</span>
         </td>
-        <td>{{ stockTake.updatedByPerson.userName || stockTake.createdByPerson.userName }}</td>
+        <td>{{ stockTake.updatedByPerson.userName }}</td>
         <td>{{ formatUpdatedDate(stockTake.updatedOn) }}</td>
         <td class="hide-from-print">
           <a class="btn btn-info btn-xs" ng-href="/#/stock-take/view/{{stockTake.id}}" tabindex="0">
