--- a/app/views/sales-targets.html
+++ b/app/views/sales-targets.html
@@ -81,7 +81,8 @@
                 class="form-control"
                 id="salesTargetValue"
                 placeholder="Value"
-                ng-disabled="isDisabled()">
+                ng-disabled="isDisabled()"
+                maxlength="10">
             </div>
           </div>
         </div>
